# ecml23-sparse

./: CMakeLists.txt  README.md  data.py  environment.yml  run.py
cmake/: tensorflow.cmake  tfcfg.py
sparse/: __init__.py  custom_layer.py  layer.py  metrics.py  optimizer.py  utils.py
sparse/ops/: fixed_fan_in_ops.py
tasks/: a3m-cascade.json  amazon670k-cascade.json  amazon670k-slice.json  wiki500k-cascade.json  wiki500k-slice.json
testing/: CMakeLists.txt  bench.py  cpu.cpp  detailed-bench.cpp  gpu.cu  helpers.h  profile.cpp  quick-bench.cpp  test.cpp  test_case_templates.h
tfsparse/cc/kernels/: backward.cpp  backward.cu  backward.cu.h  common.h  forward.cpp  forward.cu  forward.cu.h  gpu_vec.cu.h  kernel_data.cu.h  reference.cpp  register.cpp  strategies.h
tfsparse/cc/ops/: fixed_fan_in_ops.cpp
